<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="FB_ERROR_MSG_LOG" Id="{b4b9bbb9-e887-425b-b5ed-b47fff9805d8}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_ERROR_MSG_LOG
VAR
	Buffer 	: ARRAY[0..MaxBufferSize] OF ST_ERROR_MSG;
	Index	: INT;
END_VAR
VAR CONSTANT
	MaxBufferSize	: INT := 1000;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <Method Name="AddMsg" Id="{b2db5a34-7eda-4c19-8946-552cf093d791}">
      <Declaration><![CDATA[METHOD AddMsg : BOOL
VAR_INPUT
	TimeStamp	: DT;
	Location	: STRING;
	ErrorCode	: INT;
	Description	: STRING;
END_VAR
VAR
	i	: INT;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[FOR i := 0 TO MaxBufferSize DO
	IF Buffer[MaxBufferSize - i].Location = '' THEN
		CONTINUE;
	ELSE
		Buffer[MaxBufferSize - i + 1].Location 		:= Buffer[MaxBufferSize - i].Location;
		Buffer[MaxBufferSize - i + 1].TimeStamp 	:= Buffer[MaxBufferSize - i].TimeStamp;
		Buffer[MaxBufferSize - i + 1].ErrorCode 	:= Buffer[MaxBufferSize - i].ErrorCode;
		Buffer[MaxBufferSize - i + 1].Description 	:= Buffer[MaxBufferSize - i].Description;
	END_IF
END_FOR

Buffer[0].Location 		:= Location;
Buffer[0].Timestamp 	:= TimeStamp;
Buffer[0].ErrorCode 	:= ErrorCode;
Buffer[0].Description 	:= Description;

Index := Index + 1;]]></ST>
      </Implementation>
    </Method>
    <LineIds Name="FB_ERROR_MSG_LOG">
      <LineId Id="9" Count="0" />
    </LineIds>
    <LineIds Name="FB_ERROR_MSG_LOG.AddMsg">
      <LineId Id="29" Count="0" />
      <LineId Id="31" Count="0" />
      <LineId Id="33" Count="0" />
      <LineId Id="35" Count="4" />
      <LineId Id="34" Count="0" />
      <LineId Id="32" Count="0" />
      <LineId Id="30" Count="0" />
      <LineId Id="19" Count="0" />
      <LineId Id="21" Count="2" />
      <LineId Id="28" Count="0" />
      <LineId Id="27" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>